Version 2.8.1:
=============
- [Fix] attribute selector [value*=''], [value^=''] and [value$=''] do not work in IE
- [Fix] :empty does not select elements that contain only comment nodes in IE
- [Fix] setAttributes() does not work in IE9
- [Fix] Special events handling in IE9

Version 2.8:
=============
- [New] Ability to avoid global namespace collision of $ and $$ with DOMAssistant.harmonize()
- [New] Element storage through retrieve(), store() and unstore()
- [New] Event delegation through relayEvent() and unrelayEvent(), with support for focus/blur/submit/reset/change/select
- [New] Cross-browser support for mouseenter and mouseleave events
- [New] Availability of event.target and event.currentTarget in event callback functions
- [New] New method hasChild() to allow testing for descendant
- [New] New core methods: indexOf(), map(), filter(), every() and some()
- [Chg] each() can now be terminated when the callback function returns false
- [Chg] Selector engine now returns elements in the order they appear in the document
- [Chg] Events fired via triggerEvent() now bubble
- [Chg] Bubbling events can be stopped either by calling DOMAssistant.cancelBubble or returning false at the event handler
- [Chg] removeEvent() now removes all events that are bound to an element (including inline ones) when triggered without arguments
- [Chg] Moved prev() and next() methods to the core module
- [Chg] Dropped support for IE 5.0
- [Fix] Invalid selectors throw error
- [Fix] :checked, [selected] and [multiple] buggy in many browsers
- [Fix] [selected=selected], [readonly=readonly] now work the same as [selected], [readonly]
- [Fix] :xxx-of-type selectors buggy in both DOM traversal and XPath implementations
- [Fix] attribute selector with empty value (eg. [value='']) does not work
- [Fix] attribute selector with square brackets (eg. [name='foo[bar]']) does not work
- [Fix] tag#id incorrectly returns the element even when its tagname does not match